# wasmer

./: CHANGELOG.md  Cargo.toml
lib/c-api/: build.rs  wasmer.h  wasmer_wasm.h
lib/c-api/src/wasm_c_api/: macros.rs  mod.rs  own.rs  wat.rs
lib/c-api/src/wasm_c_api/types/: function.rs
lib/c-api/src/wasm_c_api/unstable/: engine.rs  module.rs  target_lexicon.rs
lib/c-api/src/wasm_c_api/wasi/: mod.rs
lib/cbindgen-deprecated-attribute/: Cargo.toml
lib/cbindgen-deprecated-attribute/src/: lib.rs
lib/cbindgen-deprecated-attribute/tests/: deprecated.rs
lib/clif-backend/src/: code.rs  trampoline.rs
lib/clif-backend/src/signal/: mod.rs  windows.rs
lib/interface-types/src/: lib.rs
lib/interface-types/src/decoders/: wat.rs
lib/llvm-backend/src/: intrinsics.rs  stackmap.rs
lib/runtime-core/: Cargo.toml
lib/runtime-core-tests/: Cargo.toml
lib/runtime-core-tests/src/: lib.rs
lib/runtime-core-tests/tests/: imports.rs
lib/runtime-core/src/: backing.rs  instance.rs  interface_types.rs  lib.rs  typed_func.rs  vm.rs
lib/runtime-core/src/memory/: mod.rs  view.rs
lib/runtime-core/src/table/: anyfunc.rs
lib/spectests/tests/: excludes.txt
lib/win-exception-handler/exception_handling/: exception_handling.c  exception_handling.h
lib/win-exception-handler/src/: exception_handling.rs
