[package]
name = "cbindgen-deprecated-attribute"
version = "0.0.1"
description = "Procedural macro to generate proper deprecated attributes with cbindgen for C and C++"
readme = "README.md"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"

[dev-dependencies]
cbindgen = "0.9"